--- a/package.json
+++ b/package.json
@@ -7,7 +7,9 @@
     "commit": "git-cz",
     "changelog": "standard-version",
     "lint": "eslint src",
-    "format": "prettier --write ./src"
+    "format": "prettier --write ./src",
+    "compiler": "tsc",
+		"watch": "tsc -w"
   },
   "devDependencies": {
     "@commitlint/cli": "^11.0.0",
